--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,15 +1,69 @@
 {% include 'recipes/partials/head.html' %}
 
 <body>
-  <header class="main-header-container">
-    <div class="main-header container">
-      <h1>
-        <a class="main-logo" href="/">
-          <i class="fas fa-utensils main-logo-icon"></i>
-          <span class="main-logo-text"> Recipes </span>
-        </a>
-      </h1>
-    </div>
-  </header>
+    {% include 'recipes/partials/header.html' %}
+
+    {% include 'recipes/partials/search.html' %}
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="">
+                </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Victor Hugo
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        17/07/2023 às 11:52
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="recipe-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum hic assumenda delectus ipsa distinctio sed sunt porro et,
+                        tempore nesciunt harum deserunt ad omnis, veniam nam consectetur voluptate, animi vel!
+                    </p>
+                </div>
+
+                <div class="recipe-meta-container">
+                    <div class="recipe-meta recipe-preparation">
+                        <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
+                        <div class="recipe-meta-text">
+                            0 Minutos
+                        </div>
+                    </div>
+                    <div class="recipe-meta recipe-servings">
+                        <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+                        <div class="recipe-meta-text">
+                            0 Porções
+                        </div>
+                    </div>
+                </div>
+
+                <footer class="recipe-footer">
+                    <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+                        <i class="fas fa-eye"></i>
+                        <span>ver mais...</span>
+                    </a>
+                </footer>
+
+            </div>
+
+            
+        </div>
+    </main>
 </body>
 </html>
