feat: cards dinamicos

--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,5 +1,7 @@
 {% extends 'global/base.html' %}
 
+{% block title %}Alterar |{% endblock title %}
+
 {% block content %}
 <main class="main-content-container">
   <div class="main-content main-content-detail container">
