--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -3,31 +3,29 @@
     <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="" />
   </div>
   <div class="recipe-title-container">
-    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+    <h2 class="recipe-title">{{ recipe.title }}</h2>
   </div>
 
   <div class="recipe-author">
     <span class="recipe-author-item">
       <i class="fas fa-user"></i>
-      Victor Hugo
+      {{ recipe.author.first_name }} {{ recipe.author.last_name }}
     </span>
     <span class="recipe-author-item">
       <i class="fas fa-calendar-alt"></i>
-      17/07/2023 às 11:52
+      {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
     </span>
     <span class="recipe-author-item">
       <a href="/recipes/category/cafe-da-manha/">
         <i class="fas fa-layer-group"></i>
-        <span>Café da manhã</span>
+        <span>{{ recipe.category.name }}</span>
       </a>
     </span>
   </div>
 
   <div class="recipe-content">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum hic
-      assumenda delectus ipsa distinctio sed sunt porro et, tempore nesciunt
-      harum deserunt ad omnis, veniam nam consectetur voluptate, animi vel!
+      {{ recipe.description }}
     </p>
   </div>
 
@@ -36,13 +34,17 @@
       <h3 class="recipe-meta-title">
         <i class="fas fa-stopwatch"></i> Preparo
       </h3>
-      <div class="recipe-meta-text">0 Minutos</div>
+      <div class="recipe-meta-text">
+        {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
+      </div>
     </div>
     <div class="recipe-meta recipe-servings">
       <h3 class="recipe-meta-title">
         <i class="fas fa-pizza-slice"></i> Porções
       </h3>
-      <div class="recipe-meta-text">0 Porções</div>
+      <div class="recipe-meta-text">
+        {{ recipe.servings }} {{ recipe.servings_unit }}
+      </div>
     </div>
   </div>
 
