feat: models e migratations

--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,17 @@
 <div class="recipe recipe-list-item">
   <div class="recipe-cover">
-    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="" />
+    <a href="{% url 'recipes:recipe' recipe.id %}">
+      <img src="{{ recipe.cover.url }}" alt="" />
+    </a>
   </div>
   <div class="recipe-title-container">
-    <h2 class="recipe-title">{{ recipe.title }}</h2>
+    
+      <h2 class="recipe-title">
+        <a href="{% url 'recipes:recipe' recipe.id %}">
+          {{ recipe.title }}
+        </a>
+      </h2>
+    
   </div>
 
   <div class="recipe-author">
@@ -24,9 +32,7 @@
   </div>
 
   <div class="recipe-content">
-    <p>
-      {{ recipe.description }}
-    </p>
+    <p>{{ recipe.description }}</p>
   </div>
 
   <div class="recipe-meta-container">
@@ -48,13 +54,21 @@
     </div>
   </div>
 
+  {% if is_detail_page is not True %}
+
   <footer class="recipe-footer">
     <a
       class="recipe-read-more button button-dark button-full-width"
-      href="/recipes/3/"
+      href="{% url 'recipes:recipe' recipe.id %}"
     >
       <i class="fas fa-eye"></i>
       <span>ver mais...</span>
     </a>
   </footer>
+
+  {% endif %} {% if is_detail_page is True %}
+  <div class="preparation-steps">
+    {{ recipe.preparation_steps|linebreaksbr }}
+  </div>
+  {% endif %}
 </div>
