--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -17,18 +17,23 @@
   </div>
 
   <div class="recipe-author">
-    <span class="recipe-author-item">
-      <i class="fas fa-user"></i>
-      {% if recipe.author.first_name %}
-        {{ recipe.author.first_name }} {{ recipe.author.last_name }}
-      {% else %}
-        {{recipe.author.username}}
-      {% endif %}
-    </span>
+
+    {% if recipe.author is not None %}
+      <span class="recipe-author-item">
+        <i class="fas fa-user"></i>
+        {% if recipe.author.first_name %}
+          {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+        {% else %}
+          {{recipe.author.username}}
+        {% endif %}
+      </span>
+    {% endif %}
+
     <span class="recipe-author-item">
       <i class="fas fa-calendar-alt"></i>
       {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
     </span>
+
     {% if recipe.category is not None %}
       <span class="recipe-author-item">
           <a href="{% url 'recipes:category' recipe.category.id %}">
@@ -37,6 +42,7 @@
           </a>
         </span>
     {% endif %}
+
   </div>
 
   <div class="recipe-content">
