--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -80,9 +80,16 @@
     </a>
   </footer>
 
-  {% endif %} {% if is_detail_page is True %}
-  <div class="preparation-steps">
-    {{ recipe.preparation_steps|linebreaksbr }}
-  </div>
-  {% endif %}
+  {% endif %} 
+
+	{% if is_detail_page is True %}
+		<div class="preparation-steps">
+			{% if recipe.preparation_steps_is_html is True %}
+				{{ recipe.preparation_steps|safe }}
+
+			{% else %}
+				{{ recipe.preparation_steps|linebreaksbr }}
+			{% endif %}
+		</div>
+  	{% endif %}
 </div>
