--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,6 +1,6 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Alterar |{% endblock title %}
+{% block title %}{{ recipe.title }} | {% endblock title %}
 
 {% block content %}
 <main class="main-content-container">
