--- a/recipes/templates/recipes/partials/pagination.html
+++ b/recipes/templates/recipes/partials/pagination.html
@@ -2,7 +2,7 @@
     <div class="container pagination">
         <div class="pagination-content">
             {% if pagination_range.first_page_out_of_range %}
-                <a href="?page=1" class="page-link page-item">
+                <a href="?page=1{{ additional_url_query }}" class="page-link page-item">
                     1
                 </a>
                 <span class="page-item">...</span>
@@ -11,11 +11,11 @@
 
             {% for page in pagination_range.pagination %}
                 {% if pagination_range.current_page == page %}
-                    <a href="?page={{ page }}" class="page-link page-item page-current">
+                    <a href="?page={{ page }}{{ additional_url_query }}" class="page-link page-item page-current">
                         {{ page }}
                     </a>
                 {% else %}
-                    <a href="?page={{ page }}" class="page-link page-item">
+                    <a href="?page={{ page }}{{ additional_url_query }}" class="page-link page-item">
                         {{ page }}
                     </a>
                 {% endif %}
@@ -23,7 +23,7 @@
 
             {% if pagination_range.last_page_out_of_range %}
                 <span class="page-item">...</span>
-                <a href="?page={{ pagination_range.total_pages }}" class="page-link page-item">
+                <a href="?page={{ pagination_range.total_pages }}{{ additional_url_query }}" class="page-link page-item">
                     {{ pagination_range.total_pages }}
                 </a>
             {% endif %}
