--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -4,8 +4,10 @@
 
 {% block content %}
 	<div class="main-content center container">
-			<h2>Register {{ request.session.number }}</h2>
+			<h2>Register</h2>
 	</div>
+
+	{% include 'recipes/partials/messages.html' %}
 
 	<div class="main-content container">
 		<form action="{% url 'authors:create' %}" method="POST">
@@ -22,13 +24,25 @@
 								<p class"help-text">{{field.help_text}}</p>
 							{% endif %}
 
-							{{field.erros}}
+							{{field.errors}}
 						</div>
 					{% endfor %}
 			</div>
 
-			<div class="form-group">
-				<button type="submit">Enviar</button>
+			{% if form.errors %}
+				<div class="form-content form-content-grid">
+					<div class="form-group">
+						<div class="message message-error">
+							There are errors in the form, please fix them and send again.
+						</div>
+					</div>
+				</div>
+			{% endif %}
+
+			<div class="form-content form-content-grid">
+				<div class="form-group">
+					<button type="submit">Send</button>
+				</div>
 			</div>
 		</form> 
 	</div>
