chore: organizando arquivos

--- a/base_templates/global/partials/head.html
+++ b/base_templates/global/partials/head.html
@@ -32,4 +32,4 @@
   rel="stylesheet"
 />
 
-<link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}" />
+<link rel="stylesheet" href="{% static 'global/css/styles.css' %}" />
