--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -420,6 +420,18 @@ h6 {
     margin: 1rem 0;
 }
 
+.authors-dashboard-container {
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+}
+
+.authors-dashboard-container h3, p, ul {
+    list-style-type: none;
+    margin: 1rem 0;
+}
+
 /* Generics */
 
 .center {
