--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -330,7 +330,7 @@ h6 {
     color: var(--color-error-dark);
 }
 
-.form-content input {
+.form-content input, textarea, select {
     width: 100%;
     padding: 1rem;
     border-radius: 0.4rem;
@@ -352,6 +352,10 @@ h6 {
 
 .inline-form {
     display: inline;
+}
+
+.span-2 {
+    grid-column: span 2;
 }
 
 .plaintext-button {
@@ -436,6 +440,10 @@ h6 {
 
 .center {
     text-align: center;
+}
+
+.left {
+    text-align: left;
 }
 
 .m-x {
