--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -1,5 +1,10 @@
 <div class="main-content container">
-  <form action="{{ form_action }}" method="POST">
+  <form
+    class="main-form" 
+    action="{{ form_action }}"
+    method="POST"
+    enctype="multipart/form-data"  
+  >
     {% csrf_token %}
     <div class="form-content form-content-grid">
         {% for field in form %}
@@ -15,6 +20,13 @@
 
             {{field.errors}}
           </div>
+
+          {% if field.name == 'cover' and field.value.url %}
+            <div class="span-2">
+              <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
+            </div>
+          {% endif %}
+
         {% endfor %}
     </div>
 
