--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -1,29 +1,37 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Dashboard ({{ user }}) | {% endblock title %}
+{% block title %}Dashboard ({{ user }}) | {%endblock title %} 
 
 {% block content %}
-	<div class="main-content center container">
-			<h2>Dashboard ({{ user }})</h2>
-      {% include 'authors/partials/login_message.html' %}
+<div class="main-content center container">
+  <h2>Dashboard ({{ user }})</h2>
 
-			<div class="authors-dashboard-container">
-				<h3>Your recipes</h3>
-				<ul>
-					{% for recipe in recipes %}
-						<li>
-							<a href="{% url 'authors:dashboard_recipe_edit' recipe.id %}">{{ recipe.title }}</a>
-						</li>
-					{% empty %}
-						<li>
-							<p>You do not recipes, please create one.</p>
-						</li>
-					{% endfor %}
-				</ul>
-			</div>
-	</div>
+  {% include 'authors/partials/login_message.html' %}
+  {% include 'global/partials/messages.html' %}
 
-	{% include 'global/partials/messages.html' %}
+  <div class="authors-dashboard-container">
+    <h3>Your recipes</h3>
+    <ul>
+      {% for recipe in recipes %}
+      <li>
+        <a href="{% url 'authors:dashboard_recipe_edit' recipe.id %}"
+          >{{ recipe.title }}</a> - 
+		  <form
+		  	class="inline-form form-delete"
+			action="{% url "authors:dashboard_recipe_delete" recipe.id %}"
+			method='POST'
+		  >
+			{% csrf_token %}
+			<button class="plaintext-button" type="submit">❌</button>
+		  </form>
+      </li>
+      {% empty %}
+      <li>
+        <p>You do not recipes, please create one.</p>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</div>
 
 {% endblock content %}
-
