refactor: delete de receitas

--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -18,10 +18,11 @@
           >{{ recipe.title }}</a> - 
 		  <form
 		  	class="inline-form form-delete"
-			action="{% url "authors:dashboard_recipe_delete" recipe.id %}"
+			action="{% url "authors:dashboard_recipe_delete" %}"
 			method='POST'
 		  >
 			{% csrf_token %}
+			<input type="hidden" name="id" value="{{ recipe.id }}">
 			<button class="plaintext-button" type="submit">❌</button>
 		  </form>
       </li>
