--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <div class="recipe recipe-list-item">
   {% if recipe.cover %}
     <div class="recipe-cover">
@@ -59,7 +61,7 @@
   <div class="recipe-meta-container">
     <div class="recipe-meta recipe-preparation">
       <h3 class="recipe-meta-title">
-        <i class="fas fa-stopwatch"></i> Preparo
+        <i class="fas fa-stopwatch"></i> {% translate 'Preparation' %}
       </h3>
       <div class="recipe-meta-text">
         {{ recipe.preparation_time }} {{ recipe.preparation_time_unit }}
@@ -67,7 +69,7 @@
     </div>
     <div class="recipe-meta recipe-servings">
       <h3 class="recipe-meta-title">
-        <i class="fas fa-pizza-slice"></i> Porções
+        <i class="fas fa-pizza-slice"></i> {% translate 'Servings' %}
       </h3>
       <div class="recipe-meta-text">
         {{ recipe.servings }} {{ recipe.servings_unit }}
@@ -83,7 +85,7 @@
       href="{% url 'recipes:recipe' recipe.id %}"
     >
       <i class="fas fa-eye"></i>
-      <span>ver mais...</span>
+      <span>{% translate 'read more' %}...</span>
     </a>
   </footer>
 
